feature-表格功能完善（表格序号列、展开行相关方法）

--- a/src/assets/styles/resetElementUI.less
+++ b/src/assets/styles/resetElementUI.less
@@ -146,6 +146,17 @@
   font-size: 0;
   .box--empty;
 }
+tr .el-table__expanded-cell {
+  .pd20 !important;
+  font-size: 13px;
+  line-height: 25px;
+}
+.expanded-item-label {
+  display: inline-block;
+  width: 100px;
+  .mgr5;
+  text-align: right;
+}
 
 // Divider
 .el-divider__text.is-center {
