feature-添加用户操作日志页面、表格公共方法行展开公共方法完成。

--- a/src/assets/styles/resetElementUI.less
+++ b/src/assets/styles/resetElementUI.less
@@ -123,12 +123,12 @@
 .el-table__header tr,
 .el-table__header th {
   padding: 0 !important;
-  height: 40px !important;
+  height: 40px;
 }
 .el-table__body tr,
 .el-table__body td {
   padding: 0 !important;
-  height: 40px !important;
+  height: 40px;
 }
 .el-table td,
 .el-table th.is-leaf {
@@ -147,13 +147,14 @@
   .box--empty;
 }
 tr .el-table__expanded-cell {
+  height: 200px;
   .pd20 !important;
   font-size: 13px;
   line-height: 25px;
 }
 .expanded-item-label {
   display: inline-block;
-  width: 100px;
+  width: 110px;
   .mgr5;
   text-align: right;
 }
