--- a/src/assets/styles/variable.less
+++ b/src/assets/styles/variable.less
@@ -1,7 +1,8 @@
 // 公用less 变量、模块
 @background-color-base: #10101d;
+@background-color-lighter: #1e1f2b;
 @background-color-darker: #0b0b0c;
-@background-color-lighter: #eaf2f8;
+@background-color-light: #121220;
 @background-color-base-opacity: rgba(16, 16, 29, .8);
 
 @color-black: #1A1A2E;
