--- a/src/assets/styles/resetElementUI.less
+++ b/src/assets/styles/resetElementUI.less
@@ -135,9 +135,12 @@
 .el-table--striped .el-table__body tr.el-table__row--striped.el-table__row--striped.el-table__row--striped td {
   background-color: @background-color-base-opacity !important;
 }
+.el-table__header-wrapper {
+  height: 40px;
+}
 .el-table__body-wrapper {
   .wfull;
-  height: calc(100% - 50px);
+  height: calc(100% - 50px) !important;
   overflow: auto !important;
 }
 .el-table__empty-block {
