--- a/src/assets/styles/variable.less
+++ b/src/assets/styles/variable.less
@@ -3,6 +3,7 @@
 @background-color-lighter: #1e1f2b;
 @background-color-darker: #0b0b0c;
 @background-color-light: #121220;
+@background-color-expand: #040921;
 @background-color-base-opacity: rgba(16, 16, 29, .8);
 
 @color-black: #1A1A2E;
